unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/Billing_Subscription_Product_Charge__c.object-meta.xml
<CustomObject>
    <label>Billing Subscription Product &amp; Charge</label>
    <nameField>
        <label>Subscription Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Subscription Product &amp; Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>