unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Billing Subscription Product &amp; Charges</relationshipLabel>
    <relationshipName>Subscription_Product_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>