unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Billing_Plan__c.field-meta.xml
<CustomField>
    <fullName>Billing_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Billing Plan record related to the subscription charge</description>
    <label>Billing Plan</label>
    <referenceTo>Billing_Plans__c</referenceTo>
    <relationshipLabel>Billing Subscription Product &amp; Charges</relationshipLabel>
    <relationshipName>Billing_Subscription_Product_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>