unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Billing_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Billing_Subscription__c</fullName>
    <label>Billing Subscription</label>
    <referenceTo>Billing_Subscription__c</referenceTo>
    <relationshipLabel>Billing Subscription Product &amp; Charges</relationshipLabel>
    <relationshipName>Subscription_Product_Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>