unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Billing_Subscription_Charge_SFID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Subscription_Charge_SFID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Subscription Charge SFID</label>
    <type>Text</type>
</CustomField>