unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Billing_System__c.field-meta.xml
<CustomField>
    <fullName>Billing_System__c</fullName>
    <formula>TEXT( Billing_Subscription__r.Billing_Account__r.Billing_System__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing System</label>
    <type>Text</type>
</CustomField>