unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Billing_System_Charge_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_System_Charge_ID__c</fullName>
    <description>ID of charge item in billing system</description>
    <label>Billing System Charge ID</label>
    <length>75</length>
    <type>Text</type>
</CustomField>