unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date__c</fullName>
    <description>Date order or charge was processed in billing system</description>
    <label>Booking Date</label>
    <type>Date</type>
</CustomField>