unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Charged_Through_Date__c.field-meta.xml
<CustomField>
    <fullName>Charged_Through_Date__c</fullName>
    <description>Date charge has been billed through</description>
    <inlineHelpText>Date charge has been billed through</inlineHelpText>
    <label>Charged Through Date</label>
    <type>Date</type>
</CustomField>