unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Extended_Amount__c.field-meta.xml
<CustomField>
    <fullName>Extended_Amount__c</fullName>
    <label>Extended Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>