unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>Firm_ID__c</fullName>
    <formula>Billing_Subscription__r.Firm_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Firm ID</label>
    <type>Text</type>
</CustomField>