unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Last_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Change_Type__c</fullName>
    <description>Last change type for rate plan from billing system to dictate automation in Salesforce</description>
    <label>Last Change Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>