unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Monthly_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Recurring_Revenue__c</fullName>
    <label>Monthly Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>