unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Original_Charge_ID__c.field-meta.xml
<CustomField>
    <fullName>Original_Charge_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique rate plan charge id from Zuora maintained through updates to rate plan on firm&#39;s subscription</description>
    <externalId>true</externalId>
    <label>Original Charge ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>