unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <length>25</length>
    <type>Text</type>
</CustomField>