unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Period_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Period_Start_Day__c</fullName>
    <label>Period Start Day</label>
    <length>25</length>
    <type>Text</type>
</CustomField>