unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Price_Model__c.field-meta.xml
<CustomField>
    <fullName>Price_Model__c</fullName>
    <label>Price Model</label>
    <length>25</length>
    <type>Text</type>
</CustomField>