unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Pricing_Plan_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Plan_Effective_End_Date__c</fullName>
    <inlineHelpText>Zuora: Rate Plan</inlineHelpText>
    <label>Pricing Plan Effective End Date</label>
    <type>Date</type>
</CustomField>