unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Pricing_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Plan_Name__c</fullName>
    <inlineHelpText>Zuora: Rate Plan</inlineHelpText>
    <label>Pricing Plan Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>