unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <label>Pricing Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>