unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Product_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Effective_Date__c</fullName>
    <label>Product Effective Date</label>
    <type>Date</type>
</CustomField>