unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>