unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <label>Product Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>