unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Subscription_Number__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Number__c</fullName>
    <formula>Billing_Subscription__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Number</label>
    <type>Text</type>
</CustomField>