unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Zuora_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Effective_End_Date__c</fullName>
    <description>End date of rate plan charge in Zuora</description>
    <label>Zuora Effective End Date</label>
    <type>Date</type>
</CustomField>