unpackaged/main/default/objects/Billing_Subscription_Product_Charge__c/fields/Zuora_Product_Rate_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Product_Rate_Plan_Id__c</fullName>
    <description>Id of product rate plan in Zuora that matches Zuora Rate Plan Id on Billing Plan object</description>
    <label>Zuora Product Rate Plan Id</label>
    <length>75</length>
    <type>Text</type>
</CustomField>